--- a/po/ar.po
+++ b/po/ar.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-11 15:20+0200\n"
-"PO-Revision-Date: 2014-07-11 13:49+0300\n"
-"Last-Translator: Safa Alfulaij <safa1996alfulaij@gmail.com>\n"
+"PO-Revision-Date: 2014-08-16 09:14+0000\n"
+"Last-Translator: <safa1996alfulaij@gmail.com>\n"
 "Language-Team: Arabic <doc@arabeyes.org>\n"
 "Language: ar\n"
 "MIME-Version: 1.0\n"
@@ -18,8 +18,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 "
 "&& n%100<=10 ? 3 : n%100>=11 ? 4 : 5;\n"
-"X-Generator: Lokalize 1.5\n"
-"X-POOTLE-MTIME: 1392211071.0\n"
+"X-Generator: Pootle 2.6.0-rc1\n"
+"X-POOTLE-MTIME: 1408180465.000000\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -296,24 +296,24 @@ msgctxt ""
 "It is a directory access bit - 'sticky' - where only owner can delete a file "
 "from it"
 msgid "Sticky"
-msgstr ""
+msgstr "لاصق"
 
 #: ../data/ui/file-prop.glade.h:33
 msgid "Set GID"
-msgstr ""
+msgstr "عيّن GID"
 
 #: ../data/ui/file-prop.glade.h:34
 msgid "Sticky & set GID"
-msgstr ""
+msgstr "لاصق وعيّن GID"
 
 #: ../data/ui/file-prop.glade.h:35
 msgctxt "this is a file access mode bit, also known as 'suid'"
 msgid "Set UID"
-msgstr ""
+msgstr "عيّن UID"
 
 #: ../data/ui/file-prop.glade.h:36
 msgid "Set UID & GID"
-msgstr ""
+msgstr "عيّن UID و GID"
 
 #: ../data/ui/file-prop.glade.h:37
 msgctxt ""
@@ -547,10 +547,9 @@ msgid "Invalid desktop entry file: '%s'"
 msgstr "ملف مُدخلة سطح المكتب غير صالح: '%s'"
 
 #: ../src/base/fm-file-launcher.c:240
-#, fuzzy, c-format
-#, c-format
+#, c-format, c-format
 msgid "No default application is set to launch URIs %s://"
-msgstr "لم يُعيَّن تطبيق افتراضي لإطلاق "
+msgstr "لا تطبيق افتراضي مُعيَّن لإطلاق معرّفات URI ‏%s://"
 
 #: ../src/base/fm-file-launcher.c:308
 #, c-format
@@ -597,7 +596,7 @@ msgstr "لم يُعيَّن محاكي طرفية في تضبيط libfm"
 
 #: ../src/base/fm-thumbnailer.c:283
 msgid "Invalid description of thumbnailer application"
-msgstr ""
+msgstr "وصف غير صالح لتطبيق المصغرات"
 
 #: ../src/base/fm-utils.c:136
 msgid "kB"
@@ -664,14 +663,14 @@ msgstr ""
 #: ../src/extra/fm-xml-file.c:336
 #, c-format
 msgid "Character reference '%-.*s' does not encode a permitted character"
-msgstr "مرجع المحرف '%-.*s'  لا يقوم بترميز محرف مسموح به"
+msgstr "مرجع المحرف '%-.*s' لا يقوم بترميز محرف مسموح به"
 
 #: ../src/extra/fm-xml-file.c:373
 #, c-format
 msgid ""
 "Empty entity '&;' seen; valid entities are: &amp; &quot; &lt; &gt; &apos;"
 msgstr ""
-"رُئِي كيان فارغ '&;'، الكيانات الصالحة هي:&amp; &quot; &lt; &gt; &apos; "
+"رُئِي كيان فارغ '&;'، الكيانات الصالحة هي: &amp; &quot; &lt; &gt; &apos;"
 
 #: ../src/extra/fm-xml-file.c:380
 #, c-format
@@ -1071,10 +1070,10 @@ msgid "Do you want to move the %d selected file to trash can?"
 msgid_plural "Do you want to move the %d selected files to trash can?"
 msgstr[0] "أتريد نقل الملف المحدّد إلى سلة المهملات؟"
 msgstr[1] "أتريد نقل الملف المحدّد إلى سلة المهملات؟"
-msgstr[2] "أتريد نقل الملفان المحدّدان إلى سلة المهملات؟"
-msgstr[3] "أتريد نقل الـ %1 ملفات المحدّدة إلى سلة المهملات؟"
-msgstr[4] "أتريد نقل الـ %1 ملفًا المحدّد إلى سلة المهملات؟"
-msgstr[5] "أتريد نقل الـ %1 ملف المحدّد إلى سلة المهملات؟"
+msgstr[2] "أتريد نقل الملفّين المحددّين إلى سلة المهملات؟"
+msgstr[3] "أتريد نقل الـ %d ملفات المحدّدة إلى سلة المهملات؟"
+msgstr[4] "أتريد نقل الـ %d ملفًا المحدّد إلى سلة المهملات؟"
+msgstr[5] "أتريد نقل الـ %d ملف المحدّد إلى سلة المهملات؟"
 
 #: ../src/gtk/fm-gtk-utils.c:988
 #, c-format
@@ -1326,9 +1325,8 @@ msgid "_Directory Tree"
 msgstr "شجرة الأ_دلة"
 
 #: ../src/gtk/fm-side-pane.c:69
-#, fuzzy
 msgid "_Remote"
-msgstr "_بعيد"
+msgstr "ال_بعيد"
 
 #: ../src/gtk/fm-side-pane.c:426 ../src/gtk/fm-side-pane.c:619
 msgid "Places"
@@ -1395,14 +1393,13 @@ msgid "Cannot access destination file"
 msgstr "تعذّر الوصول إلى الملف الوجهة"
 
 #: ../src/job/fm-file-ops-job.c:564
-#, fuzzy
 msgid "Cannot create a link on non-native filesystem"
-msgstr "تعذّر إنشاء وصلة في نظام ملفات غير أصيل"
+msgstr "لا يمكن إنشاء وصلة في نظام ملفات غير أصيل"
 
 #: ../src/job/fm-file-ops-job-delete.c:489
 #, c-format
 msgid "Cannot untrash file '%s': original path not known"
-msgstr ""
+msgstr "لايمكن إخراج الملف '%s' من سلة المحذوفات: المسار الأصلي غير معروف"
 
 #: ../src/job/fm-file-ops-job-xfer.c:54
 msgid "Source and destination are the same."
@@ -1525,10 +1522,9 @@ msgid "The '%s' entry file is broken"
 msgstr "ملف المُدخلة '%s' معطوب"
 
 #: ../src/modules/vfs-menu.c:2338 ../src/modules/vfs-menu.c:2427
-#, fuzzy, c-format
-#, c-format, c-format
+#, c-format, c-format, c-format
 msgid "Cannot create menu item '%s'"
-msgstr "لا يمكن إنشاء عنصر القائمة '%s'"
+msgstr "تعذّر إنشاء عنصر القائمة '%s'"
 
 #: ../src/modules/vfs-menu.c:2572
 msgid "Name of menu directory should not end with \".desktop\""
@@ -1550,7 +1546,6 @@ msgstr "FmMenuVFileMonitor: المجلد '%s' غير موجود في خبيئة 
 
 #. FIXME: need name to be converted to UTF-8?
 #: ../src/modules/vfs-search.c:985
-#, fuzzy
 msgid "Search"
 msgstr "بحث"
 
