--- a/po/pl.po
+++ b/po/pl.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-11 15:20+0200\n"
-"PO-Revision-Date: 2014-03-24 09:45+0000\n"
-"Last-Translator: Piotr <strebski@o2.pl>\n"
+"PO-Revision-Date: 2014-08-20 14:21+0000\n"
+"Last-Translator: Piotr Strębski <strebski@o2.pl>\n"
 "Language-Team: polski <>\n"
 "Language: pl\n"
 "MIME-Version: 1.0\n"
@@ -16,8 +16,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bits\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
-"X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1395654350.0\n"
+"X-Generator: Pootle 2.6.0-rc1\n"
+"X-POOTLE-MTIME: 1408544481.000000\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -26,7 +26,7 @@ msgstr "Preferowane programy"
 #: ../data/libfm-pref-apps.desktop.in.h:2
 msgid "Select applications called on click on Web link or e-mail address"
 msgstr ""
-"Wybiera programy uruchamiane przy kliknięciu w odnośnik sieciowy lub adres "
+"Wybierz programy uruchamiane przy kliknięciu w odnośnik sieciowy lub adres "
 "e-mail"
 
 #: ../data/lxshortcut.desktop.in.h:1
@@ -56,7 +56,7 @@ msgstr "<b>Wiersz p_oleceń do wykonania:</b>"
 #: ../data/ui/app-chooser.glade.h:5
 #: ../src/modules/gtk-fileprop-x-desktop.c:275
 msgid "_Browse..."
-msgstr "P_rzeglądaj..."
+msgstr "_Przeglądaj..."
 
 #. row 1: "Terminal" GtkCheckButton
 #: ../data/ui/app-chooser.glade.h:6
@@ -68,7 +68,7 @@ msgstr "_Uruchomienie w emulatorze terminala"
 #: ../data/ui/app-chooser.glade.h:7
 #: ../src/modules/gtk-fileprop-x-desktop.c:306
 msgid "_Keep terminal window open after command execution"
-msgstr "_Zachowanie otwartego okna terminalu po wykonaniu polecenia"
+msgstr "_Zachowanie otwartego okna terminala po wykonaniu polecenia"
 
 #: ../data/ui/app-chooser.glade.h:9
 #, no-c-format
