--- a/po/hr.po
+++ b/po/hr.po
@@ -7,17 +7,17 @@ msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-11 15:20+0200\n"
-"PO-Revision-Date: 2014-01-14 00:50+0000\n"
-"Last-Translator: Ivica <ikoli@yahoo.com>\n"
+"PO-Revision-Date: 2014-10-14 08:06+0000\n"
+"Last-Translator: Ivica Kolić <ikoli@yahoo.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: hr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
-"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1389660613.0\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
+"n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Pootle 2.6.0-rc1\n"
+"X-POOTLE-MTIME: 1413273977.000000\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -150,7 +150,7 @@ msgstr ""
 #. genitive case is here: Choose icon from: ...
 #: ../data/ui/choose-icon.ui.h:5
 msgid "image files"
-msgstr "Slikovne datoteke"
+msgstr "slikovne datoteke"
 
 #: ../data/ui/choose-icon.ui.h:6
 msgid "<b>Choose icon from:</b>"
@@ -427,7 +427,7 @@ msgstr "Map_e"
 
 #: ../data/ui/filesearch.glade.h:24
 msgid "Ot_her:"
-msgstr ""
+msgstr "Os_talo:"
 
 #: ../data/ui/filesearch.glade.h:25
 msgid ""
@@ -542,7 +542,7 @@ msgstr "Neispravna datoteka unosa radne površine: '%s'"
 #: ../src/base/fm-file-launcher.c:240
 #, c-format
 msgid "No default application is set to launch URIs %s://"
-msgstr "Nijedan zadani program nije postavljen da pokrene  URIs %s://"
+msgstr "Nijedan zadani program nije postavljen da pokrene URIs %s://"
 
 #: ../src/base/fm-file-launcher.c:308
 #, c-format
@@ -676,12 +676,12 @@ msgstr ""
 #: ../src/extra/fm-xml-file.c:603
 #, c-format
 msgid "Element '%s' was closed but no element was opened"
-msgstr ""
+msgstr "Element '%s' je zatvoren, ali nijedan element nije otvoren"
 
 #: ../src/extra/fm-xml-file.c:619
 #, c-format
 msgid "Element '%s' was closed but the currently open element is '%s'"
-msgstr ""
+msgstr "Element '%s' je zatvoren, ali trenutno otvoreni element je '%s'"
 
 #: ../src/extra/fm-xml-file.c:675
 #, c-format
@@ -712,7 +712,7 @@ msgstr "Prilagodi"
 #: ../src/gtk/fm-app-chooser-dlg.c:266
 #, c-format
 msgid "<b>Select an application to open \"%s\" files</b>"
-msgstr ""
+msgstr "<b>Odaberite program za otvaranje \"%s\" datoteka</b>"
 
 #: ../src/gtk/fm-app-menu-view.c:224
 msgid "Installed Applications"
@@ -781,7 +781,7 @@ msgstr "_Dodaj u zabilješke"
 
 #: ../src/gtk/fm-file-menu.c:162
 msgid "_Rename..."
-msgstr ""
+msgstr "_Preimenuj..."
 
 #: ../src/gtk/fm-file-menu.c:163
 msgid "Co_mpress..."
@@ -806,7 +806,7 @@ msgstr "Pomakni u _smeće"
 
 #: ../src/gtk/fm-file-menu.c:773
 msgid "Your bookmarks already have a bookmark for this folder."
-msgstr ""
+msgstr "Vaše zabilješke već imaju zabilješku za ovu mapu."
 
 #: ../src/gtk/fm-file-properties.c:368
 msgid "Image files"
@@ -903,7 +903,7 @@ msgstr "Lokacija"
 
 #: ../src/gtk/fm-folder-model.c:197
 msgid "Extension"
-msgstr ""
+msgstr "Proširenje"
 
 #: ../src/gtk/fm-folder-view.c:178
 msgid "Create _New..."
@@ -1038,7 +1038,7 @@ msgstr "Samo administrator sustava ima dozvole ovo učiniti."
 #: ../src/gtk/fm-gtk-utils.c:923
 #, c-format
 msgid "Do you want to move the file '%s' to trash can?"
-msgstr "Želite li maknuti datoteku '%s u smeće?"
+msgstr "Želite li maknuti datoteku '%s' u smeće?"
 
 #: ../src/gtk/fm-gtk-utils.c:928
 #, c-format
@@ -1051,7 +1051,7 @@ msgstr[2] "Želite li maknuti odabranih %d datoteka u smeće?"
 #: ../src/gtk/fm-gtk-utils.c:988
 #, c-format
 msgid "Do you want to delete the file '%s'?"
-msgstr "Želite li izbrisati datoteku  '%s'?"
+msgstr "Želite li izbrisati datoteku '%s'?"
 
 #: ../src/gtk/fm-gtk-utils.c:993
 #, c-format
@@ -1240,7 +1240,7 @@ msgstr "<b>U:</b>"
 
 #: ../src/gtk/fm-progress-dlg.c:600
 msgid "Creating links to files"
-msgstr ""
+msgstr "Stvaranje poveznica prema datotekama"
 
 #. translators: it is part of "Changing attributes of xxx.txt"
 #: ../src/gtk/fm-progress-dlg.c:607
@@ -1276,7 +1276,7 @@ msgstr "<b>%s datoteka:</b>"
 #: ../src/gtk/fm-progress-dlg.c:636
 #, c-format, c-format
 msgid "<b>%s files:</b>"
-msgstr "<b>%datoteke:</b>"
+msgstr "<b>%s datoteke:</b>"
 
 #: ../src/gtk/fm-side-pane.c:66
 msgid "_Off"
@@ -1346,7 +1346,7 @@ msgstr "Pogled _detaljne liste"
 
 #: ../src/gtk/fm-tab-label.c:159
 msgid "Changes active tab"
-msgstr ""
+msgstr "Promijeni aktivnu karticu"
 
 #: ../src/job/fm-dir-list-job.c:237 ../src/job/fm-dir-list-job.c:250
 #: ../src/job/fm-dir-list-job.c:362
@@ -1386,7 +1386,7 @@ msgstr "Odredište je podmapa izvora"
 #: ../src/job/fm-file-ops-job-xfer.c:380
 #, c-format
 msgid "Cannot copy file '%s': not supported"
-msgstr "Ne mogu kopirati datoteku  '%s': nije podržano"
+msgstr "Ne mogu kopirati datoteku '%s': nije podržano"
 
 #: ../src/job/fm-file-ops-job-change-attr.c:312
 #, c-format
@@ -1411,7 +1411,7 @@ msgstr ""
 #: ../src/modules/vfs-menu.c:568 ../src/modules/vfs-menu.c:682
 #, c-format
 msgid "Cannot create XML definition for '%s'"
-msgstr "Ne mogu napraviti XML definiciju za  '%s'"
+msgstr "Ne mogu napraviti XML definiciju za '%s'"
 
 #: ../src/modules/vfs-menu.c:449 ../src/modules/vfs-menu.c:2664
 #, c-format
@@ -1430,20 +1430,20 @@ msgstr "Operacija nije podržana"
 
 #: ../src/modules/vfs-menu.c:1394
 msgid "Invalid menu directory"
-msgstr ""
+msgstr "Neispravni direktorij izbornika"
 
 #: ../src/modules/vfs-menu.c:1457 ../src/modules/vfs-menu.c:1736
 msgid "Menu item name cannot be empty"
-msgstr ""
+msgstr "Ime stavke izbornika ne može biti prazno"
 
 #: ../src/modules/vfs-menu.c:1507
 #, c-format
 msgid "Invalid menu directory '%s'"
-msgstr ""
+msgstr "Neispravan direktorij izbornika '%s'"
 
 #: ../src/modules/vfs-menu.c:1653 ../src/modules/vfs-menu.c:1794
 msgid "Invalid menu item"
-msgstr ""
+msgstr "Neispravna stavka izbornika"
 
 #: ../src/modules/vfs-menu.c:1657 ../src/modules/vfs-menu.c:1798
 #, c-format
@@ -1457,12 +1457,12 @@ msgstr ""
 #: ../src/modules/vfs-menu.c:1978
 #, c-format
 msgid "Setting attribute '%s' not supported"
-msgstr ""
+msgstr "Postavljanje atributa '%s' nije podržano"
 
 #: ../src/modules/vfs-menu.c:1988
 #, c-format
 msgid "Invalid value for attribute '%s'"
-msgstr ""
+msgstr "Neispravna vrijednost za atribut '%s'"
 
 #: ../src/modules/vfs-menu.c:2025
 #, c-format
